--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,6 @@
 				</tbody>
 			</table>
 		</script>
-		<script src="../dist/bundle.js"></script>
+		<script src="/dist/bundle.js"></script>
 	</body>
 </html>
