--- a/public/@index.html
+++ b/public/@index.html
@@ -2,11 +2,6 @@
 <html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-		<script src="js/libs/jquery-1.10.2.min.js"></script>
-		<script src="js/libs/handlebars-v1.3.0.js"></script>
-		<script src="js/geolocation.js"></script>
-
 		<link rel="stylesheet" href="css/geolocation.css">
 
 	</head>
@@ -68,6 +63,10 @@
 				</tbody>
 			</table>
 		</script>
-		<script src="/dist/bundle.js"></script>
+		
+		<script src="js/libs/jquery-1.10.2.min.js"></script>
+		<script src="js/libs/handlebars-v1.3.0.js"></script>
+		<script src="js/geolocation.js"></script>
+		<script src="bundle.js"></script>
 	</body>
 </html>
