--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div id="root"></div>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNOYGm8-6SuNv1luUS4AtCzAKFVbtQhLo"></script>
         <script src="bundle.js"></script>
     </body>
 </html>
